syntax = "proto3";

package main;

//option go_package = "./cbvr_payment";

option go_package = "github.com/yipeng-git/algorithms/grpc/pb";

import "google/protobuf/descriptor.proto";


//更新命令
//    protoc --go_out=. --go_opt=paths=source_relative \
//    --go-grpc_out=. --go-grpc_opt=paths=source_relative \
//    test.proto

// 服务接口定义
service Test {
  rpc Echo (EchoRequest) returns (EchoResponse) {}
}

message EchoRequest {
  string text = 1;
  string text2 = 2;
}

message EchoResponse {
  string text = 1;
}
